# pyjectify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  update-doc.yml
docs/: conf.py  examples.rst  index.rst
docs/pyjectify_win/: index.rst
docs/pyjectify_win/core/: defines.rst  index.rst  pe.rst  process.rst
docs/pyjectify_win/modules/: hook.rst  index.rst  inject.rst  memscan.rst  pythonlib.rst
docs/pyjectify_win/utils/: apisetschema.rst  index.rst  syscall.rst
pyjectify/: __init__.py
pyjectify/windows/: __init__.py  pyjectifywin.py
pyjectify/windows/core/: defines.py  pe.py  process.py
pyjectify/windows/modules/: hook.py  inject.py  memscan.py  pythonlib.py
pyjectify/windows/utils/: apisetschema.py  syscall.py
